fixing header spacing issues, hopefully

--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -75,5 +75,6 @@ section {
 
 h3 {
   margin-bottom: -20px;
+  margin-top: 10px;
   padding: 0;
 }
